<resources>
    <string name="app_name">CotizacionDolar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cotización Dolar</string>
    <string name="nav_header_subtitle">Grupo L2</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Cerrar sesión</string>

    <string name="menu_history">Historial de login</string>
    <string name="menu_quotation">Cotización</string>
    <string name="menu_events">Events</string>

    <string name="uri_dolar_argentina">https://api-dolar-argentina.herokuapp.com/api/</string>
    <string name="uri_soa">http://so-unlam.net.ar/api/api/</string>
    <string name="spinner_title">Cotizacion</string>
    <string name="button_oficial_text">oficial</string>
    <string name="button_blue_text">blue</string>
    <string name="button_bolsa_text">bolsa</string>

    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="aceptar">Aceptar</string>
    <string name="signup_hint_name">Nombre</string>
    <string name="signup_hint_last_name">Apellido</string>
    <string name="signup_hint_dni">DNI</string>
    <string name="signup_hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="signup_hint_commission">Comisión</string>
    <string name="signup_hint_group">Grupo</string>
    <string name="cancel_button_text">Cancelar</string>
    <string name="confirm_button_text">Confirmar</string>
    <string name="code_edittext_hint">Código</string>
    <string name="generate_button_text">Generar</string>
    <string name="signup_button_text">Registrarse</string>
    <string name="login_button_text">Iniciar sesión</string>
    <string name="login_user_hint">Usuario</string>
    <string name="quotation_purchase_label">COMPRA:</string>
    <string name="quotation_sale_label">VENTA:</string>
    <string name="quotation_date_label">FECHA Y HORA:</string>

    <string name="quotation_price_text">$%1$s</string>
</resources>