<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_quotation">

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.cotizaciondolar.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_quotation"
        android:name="com.example.cotizaciondolar.ui.quotation.QuotationFragment"
        android:label="@string/menu_quotation"
        tools:layout="@layout/fragment_quotation" />

    <fragment
        android:id="@+id/nav_events"
        android:name="com.example.cotizaciondolar.ui.events.EventsFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_events" />
</navigation>